// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContributorLinking should be disabled 1`] = `
<div>
  <div
    className="author-link-list"
  >
    <Infinite
      className="author-link-infinite-scroll"
      containerHeight={200}
      displayBottomUpwards={false}
      elementHeight={73}
      handleScroll={[Function]}
      infiniteLoadBeginEdgeOffset={50}
      isInfiniteLoading={false}
      loadingSpinnerDelegate={<div />}
      onInfiniteLoad={[Function]}
      styles={Object {}}
      timeScrollStateLastsForAfterUserScrolls={150}
      useWindowAsScrollContainer={false}
    >
      <div
        className="columns is-multiline is-gapless is-marginless"
      >
        <AuthorItem
          author={
            Object {
              "rek_author": "Overgaard, Nana H.",
              "rek_author_id": null,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={true}
          index={0}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
        <AuthorItem
          author={
            Object {
              "rek_author": "Cruz, Jazmina L.",
              "rek_author_id": null,
              "rek_author_order": 2,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={true}
          index={1}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
        <AuthorItem
          author={
            Object {
              "rek_author": "Bridge, Jennifer A.",
              "rek_author_id": null,
              "rek_author_order": 3,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={true}
          index={2}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
      </div>
      <div
        className="columns is-multiline is-gapless is-marginless"
      >
        <AuthorItem
          author={
            Object {
              "rek_author": "Nel, Hendrik J.",
              "rek_author_id": null,
              "rek_author_order": 4,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={true}
          index={3}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
      </div>
    </Infinite>
  </div>
</div>
`;

exports[`ContributorLinking should render all contributors as unlinked and selectable 1`] = `
<div>
  <div
    className="author-link-list"
  >
    <Infinite
      className="author-link-infinite-scroll"
      containerHeight={200}
      displayBottomUpwards={false}
      elementHeight={73}
      handleScroll={[Function]}
      infiniteLoadBeginEdgeOffset={50}
      isInfiniteLoading={false}
      loadingSpinnerDelegate={<div />}
      onInfiniteLoad={[Function]}
      styles={Object {}}
      timeScrollStateLastsForAfterUserScrolls={150}
      useWindowAsScrollContainer={false}
    >
      <div
        className="columns is-multiline is-gapless is-marginless"
      >
        <AuthorItem
          author={
            Object {
              "rek_author": "Overgaard, Nana H.",
              "rek_author_id": null,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={false}
          index={0}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
        <AuthorItem
          author={
            Object {
              "rek_author": "Cruz, Jazmina L.",
              "rek_author_id": null,
              "rek_author_order": 2,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={false}
          index={1}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
        <AuthorItem
          author={
            Object {
              "rek_author": "Bridge, Jennifer A.",
              "rek_author_id": null,
              "rek_author_order": 3,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={false}
          index={2}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
      </div>
      <div
        className="columns is-multiline is-gapless is-marginless"
      >
        <AuthorItem
          author={
            Object {
              "rek_author": "Nel, Hendrik J.",
              "rek_author_id": null,
              "rek_author_order": 4,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={false}
          index={3}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
      </div>
    </Infinite>
  </div>
</div>
`;

exports[`ContributorLinking should render author Bridge as linked and disabled 1`] = `
<div>
  <div
    className="author-link-list"
  >
    <Infinite
      className="author-link-infinite-scroll"
      containerHeight={200}
      displayBottomUpwards={false}
      elementHeight={73}
      handleScroll={[Function]}
      infiniteLoadBeginEdgeOffset={50}
      isInfiniteLoading={false}
      loadingSpinnerDelegate={<div />}
      onInfiniteLoad={[Function]}
      styles={Object {}}
      timeScrollStateLastsForAfterUserScrolls={150}
      useWindowAsScrollContainer={false}
    >
      <div
        className="columns is-multiline is-gapless is-marginless"
      >
        <AuthorItem
          author={
            Object {
              "rek_author": "Overgaard, Nana H.",
              "rek_author_id": null,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={false}
          index={0}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
        <AuthorItem
          author={
            Object {
              "rek_author": "Cruz, Jazmina L.",
              "rek_author_id": null,
              "rek_author_order": 2,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={false}
          index={1}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
        <AuthorItem
          author={
            Object {
              "rek_author": "Bridge, Jennifer A.",
              "rek_author_id": null,
              "rek_author_order": 3,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={false}
          index={2}
          linked={true}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
      </div>
      <div
        className="columns is-multiline is-gapless is-marginless"
      >
        <AuthorItem
          author={
            Object {
              "rek_author": "Nel, Hendrik J.",
              "rek_author_id": null,
              "rek_author_order": 4,
              "rek_author_pid": "UQ:654776",
            }
          }
          disabled={false}
          index={3}
          linked={false}
          locale={
            Object {
              "ordinalData": Array [
                "First",
                "Second",
                "Third",
                "Fourth",
                "Fifth",
                "Sixth",
                "Seventh",
                "Eighth",
                "Ninth",
                "Tenth",
              ],
              "suffix": " listed [type]",
            }
          }
          onAuthorSelected={[Function]}
          selected={null}
          type="contributor"
        />
      </div>
    </Infinite>
  </div>
</div>
`;
